# ai-journal-kit

./: .ai-journal-config.json.example  .bandit  .env  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INVOKE_TASKS.md  LICENSE  LOCAL_CI_PARITY.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASING.md  TESTING.md  VIDEO_SCRIPT.md  coverage.json  coverage.xml  journal  pyproject.toml  pytest.ini  tasks.py
.claude/: README.md  SETUP.md
.claude/commands/: ci-check.md  coverage.md  release.md  test.md
.claude/hooks/: hooks.json  pre-commit-check.sh  template-validator.sh
.cursor/rules/: specify-rules.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  security.yml  test.yml
_core/: CHANGELOG.md  MAINTAINERS.md
_core/docs/: ai-coach-setup.md  cloud-storage-guide.md  cursor-setup.md  customization-guide.md  workflows.md
_core/examples/: 2025-11-06-example.md
_core/ide-configs/: README.md
_core/instructions/: demo-safe-instructions.md
_core/scripts/: change-location.sh  setup.sh  update.sh
_core/templates/: area-template.md  daily-template.md  memory-template.md  people-template.md  project-template.md
ai_journal_kit/: __init__.py  __main__.py
ai_journal_kit/cli/: __init__.py  add_ide.py  app.py  customize_template.py  doctor.py  list_journals.py  move.py  search.py  setup.py  status.py  switch_framework.py  update.py  use_journal.py
ai_journal_kit/core/: __init__.py  config.py  date_utils.py  file_scanner.py  journal.py  manifest.py  migration.py  search_engine.py  search_result.py  symlinks.py  template_updater.py  templates.py  validation.py
ai_journal_kit/templates/: WELCOME.md  __init__.py  daily-template.md  memory-template.md  people-template.md  project-template.md
ai_journal_kit/utils/: __init__.py  platform.py  ui.py
specs/001-e2e-tests/: plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/e2e/: conftest.py  test_fresh_install.py  test_search_e2e.py  test_upgrade_workflow.py
tests/integration/: conftest.py  helpers.py  test_add_ide.py  test_config_persistence_e2e.py  test_doctor_repairs.py  test_framework_setup.py  test_infrastructure_smoke.py  test_move_journal.py  test_multi_journal_commands.py  test_multi_journal_setup.py  test_search_integration.py  test_setup_complete.py  test_setup_flow.py  test_status_diagnostics.py  test_switch_framework.py  test_update_flow.py
tests/unit/: test_app.py  test_cli_add_ide.py  test_cli_list_journals.py  (+23 more)
(+56 files in other folders)
